--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/mongodb": "^4.0.7",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-discord": "^0.1.11",
     "bun-types": "latest"
@@ -26,7 +27,9 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
+    "googleapis": "^131.0.0",
     "mongodb": "^6.3.0",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4"
   }
