--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prod-discord": "export NODE_ENV='production' && bun ./discord/src/index.ts"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/mongodb": "^4.0.7",
@@ -22,15 +24,20 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.6.11",
     "axios": "^1.6.5",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "googleapis": "^131.0.0",
     "mongodb": "^6.3.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "zod": "^3.23.8"
   }
 }
